- fixed aggregator.lua
- added FreePOPsService.exe to the win distribution, not completely working.
- fixed debian chroot jail (thanks Alessandro B.).
- added win32 script to starf FP & OE. (thanks pegasus).
- fixed win32 XML generation, now freepopsd.exe -x gmail.lua creates a
gmail.lua.xml file instead of writing the XML to stdout.txt
- libero_login now made with a POST, since some proxy logs in clear the GET
parameters. Thanks Roberto F.
- added --no-icon win32 flag
- fissato uninstall win32
27/09/2004 0.0.18 fix release
- updated plugins by russell
- fixed bad bug in dothack()
- fixed potential bug in log.c
- more work on BeOS, should build properly now.
- fixed log.c bug in BeOS porting (thanks ...)
- fixed win32 exit function
- fixed a bit more the rpm
19/09/2004 0.0.17 fix release
- fixed XML generation. no more escaped entities
- fixed out of boud RETR don't send . bug (thanks ramik for submitting)
- fix per yahoo (ramik)
- fix for gmail: modified dele actions for default folders, fix for message
marking, fix for passwords with special characters, modified action for spam
folder. (thanks ramik)
- added Mac OS X Jaguar support
- added fn:patch tag support to flatnuke plugin
- added crypto (md5 and bin2hex) bindings
- error in liber.lua (comments) (thanks emaury)
- fixed popforward
- now the popserver disconnects after 60 seconds of client inactivity (this is
RFC compliant, even if the rfc says we should wait more maybe, and the NOP
pop3 command is used to avoid timeouts.
- added --fpat to force proxy auth method
- some stuff that may fix win32 shutdown problems
- fixed dothack bug
- gmail \r\r\n and \r\n\n issue fixed
- gmail has an auto learn \r-\n-issue procedure and fix
- fixed hotmail and yahoo (thanks russell)
08/09/2004 0.0.16 major feature release
- fixed the gmail plugin and added some parameters (thanks rami)
- owa.lua moved to davmail.lua
- fixed ebuild (thanks er_capoccia)
- added support for w3c date format in aggregator.lua