@@ -26,8 +26,6 @@ for next version or later:
 	http://msdn.microsoft.com/library/default.asp?url=/library/en-us/shellcc/platform/shell/programmersguide/shell_int/shell_int_programming/taskbar.asp
 	http://www.muukka.net/programming/service.html
 	http://freepops.diludovico.it/index.php?showtopic=1190&st=0&#entry6678
-	pegasus manual for win vbs
-	finish service and add link to install/remove to the start menu.
 	fix gmail first block bug
 	http://freepops.diludovico.it/index.php?showtopic=1208&st=0&#entry6771
 
