@@ -72,10 +72,13 @@ InstallDir $PROGRAMFILES\FreePOPs
 InstallDirRegKey HKLM SOFTWARE\NSIS_FreePOPs "Install_Dir"
 
 ;License
-LicenseText "This is free software, distributed under the GNU/GPL license" "Continue"
+LicenseText "This is free software, distributed under the GNU/GPL license" \
+	"Continue"
 LicenseBkColor /windows
 LicenseData "COPYING.txt"
-LicenseForceSelection radiobuttons "I like free software." "I only use proprietary software, I'll never install this crap."
+LicenseForceSelection radiobuttons \
+	"I like free software." \
+	"I only use proprietary software, I'll never install this crap."
 
 ; The text to prompt the user to enter a directory
 DirText "Choose a directory to install FreePOPs:"
@@ -98,8 +101,14 @@ Section "FreePOPs (required)"
   ; Write the installation path into the registry
   WriteRegStr HKLM SOFTWARE\NSIS_FreePOPs "Install_Dir" "$INSTDIR"
   ; Write the uninstall keys for Windows
-  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs" "DisplayName" "NSIS FreePOPs (remove only)"
-  WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs" "UninstallString" '"$INSTDIR\uninstall.exe"'
+  WriteRegStr HKLM \
+  	"Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs" \
+	"DisplayName" \
+	"NSIS FreePOPs (remove only)"
+  WriteRegStr HKLM \
+  	"Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs" \
+	"UninstallString" \
+	'"$INSTDIR\uninstall.exe"'
   WriteUninstaller "uninstall.exe"
 SectionEnd
 
@@ -108,16 +117,64 @@ Section "Start Menu Shortcuts"
   CreateDirectory "$SMPROGRAMS\FreePOPs"
   CreateDirectory "$SMPROGRAMS\FreePOPs\Debug"
   CreateDirectory "$SMPROGRAMS\FreePOPs\Scripts"
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Uninstall.lnk" "$INSTDIR\uninstall.exe" "" "$INSTDIR\uninstall.exe" 0
+  CreateDirectory "$SMPROGRAMS\FreePOPs\Service"
+  
+  
   SetOverwrite off
-  CreateShortCut "$SMPROGRAMS\FreePOPs\FreePOPs.lnk" "$INSTDIR\freepopsd.exe" "" "$INSTDIR\freepopsd.exe" 0
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Debug\FreePOPs -vv (verbose log).lnk" "$INSTDIR\freepopsd.exe" "-vv" "$INSTDIR\freepopsd.exe" 0
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Scripts\FreePOPs & Mail.lnk" "$INSTDIR\freepopsd.vbs" "" "$INSTDIR\freepopsd.vbs" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\FreePOPs.lnk" \
+  	"$INSTDIR\freepopsd.exe" "" "$INSTDIR\freepopsd.exe" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Debug\FreePOPs -vv (verbose log).lnk" \
+  	"$INSTDIR\freepopsd.exe" "-vv" "$INSTDIR\freepopsd.exe" 0
+
   SetOverwrite on
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Manual (english).lnk" "http://freepops.sourceforge.net/it/files/manual.pdf" "" "http://freepops.sourceforge.net/" 0
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Manuale (italiano).lnk" "http://freepops.sourceforge.net/it/files/manual-it.pdf" "" "http://freepops.sourceforge.net/" 0
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Website.lnk" "http://freepops.sourceforge.net/index.html" "" "http://freepops.sourceforge.net/" 0
-  CreateShortCut "$SMPROGRAMS\FreePOPs\Forum.lnk" "http://freepops.diludovico.it" "" "http://freepops.diludovico.it" 0
+
+  ; service
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Service\en-manual.lnk" \
+  	"$INSTDIR\SERVICE.txt" "" "$INSTDIR\SERVICE.txt" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Service\it-manual.lnk" \
+  	"$INSTDIR\SERVICE.txt" "" "$INSTDIR\SERVICE.txt" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Service\Uninstall service.lnk" \
+  	"$INSTDIR\freeservice.exe" "uninstall" "$INSTDIR\uninstall.exe" 0
+  CreateShortCut \
+      "$SMPROGRAMS\FreePOPs\Service\Install service (with default options).lnk"\
+  	"$INSTDIR\freeservice.exe" "install" "$INSTDIR\freepopsd.exe" 0
+  CreateShortCut \
+  	"$SMPROGRAMS\FreePOPs\Service\Install service (-p 110 -b 0.0.0.0).lnk" \
+  	"$INSTDIR\freeservice.exe" "install -p 110 -b 0.0.0.0" \
+	"$INSTDIR\freepopsd.exe" 0
+  CreateShortCut \
+  	"$SMPROGRAMS\FreePOPs\Service\Install service (-p 110 -b 0.0.0.0).lnk" \
+  	"$INSTDIR\freeservice.exe" "install -p 110 -b 0.0.0.0" \
+	"$INSTDIR\freepopsd.exe" 0
+  CreateShortCut \
+  	"$SMPROGRAMS\FreePOPs\Service\Install service (-b 0.0.0.0).lnk" \
+  	"$INSTDIR\freeservice.exe" "install -b 0.0.0.0" \
+	"$INSTDIR\freepopsd.exe" 0
+
+  ; mail & FP
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Scripts\FreePOPs & Mail.lnk" \
+  	"$INSTDIR\freepopsd.vbs" "" "$INSTDIR\freepopsd.vbs" 0
+  CreateShortCut \
+  	"$SMPROGRAMS\FreePOPs\Scripts\FreePOPs & Mail - en-manual.lnk" \
+	"$INSTDIR\README.FPM.en.txt" "" "$INSTDIR\README.FPM.en.txt" 0
+  CreateShortCut \
+  	"$SMPROGRAMS\FreePOPs\Scripts\FreePOPs & Mail - it-manual.lnk" \
+	"$INSTDIR\README.FPM.en.txt" "" "$INSTDIR\README.FPM.it.txt" 0
+
+  ; doc + remove
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Uninstall.lnk" \
+  	"$INSTDIR\uninstall.exe" "" "$INSTDIR\uninstall.exe" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Manual (english).lnk" \
+  	"http://freepops.sourceforge.net/it/files/manual.pdf" \
+	"" "http://freepops.sourceforge.net/" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Manuale (italiano).lnk" \
+  	"http://freepops.sourceforge.net/it/files/manual-it.pdf" "" \
+	"http://freepops.sourceforge.net/" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Website.lnk" \
+  	"http://freepops.sourceforge.net/index.html" "" \
+	"http://freepops.sourceforge.net/" 0
+  CreateShortCut "$SMPROGRAMS\FreePOPs\Forum.lnk" \
+	  "http://freepops.diludovico.it" "" "http://freepops.diludovico.it" 0
 SectionEnd
 
 ; uninstall stuff
@@ -125,7 +182,8 @@ SectionEnd
 ; special uninstall section.
 Section "Uninstall"
   ; remove registry keys
-  DeleteRegKey HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs"
+  DeleteRegKey HKLM \
+  	"Software\Microsoft\Windows\CurrentVersion\Uninstall\FreePOPs"
   DeleteRegKey HKLM SOFTWARE\NSIS_FreePOPs
   ; remove files
   Delete $INSTDIR\*.exe
@@ -140,6 +198,7 @@ Section "Uninstall"
   Delete "$SMPROGRAMS\FreePOPs\*.*"
   Delete "$SMPROGRAMS\FreePOPs\Debug\*.*"
   Delete "$SMPROGRAMS\FreePOPs\Scripts\*.*"
+  Delete "$SMPROGRAMS\FreePOPs\Service\*.*"
   ; remove directories used.
   RMDir "$SMPROGRAMS\FreePOPs\Debug"
   RMDir "$SMPROGRAMS\FreePOPs"
@@ -147,8 +206,11 @@ Section "Uninstall"
 SectionEnd
 
 Function .onInstSuccess
-  MessageBox MB_YESNO|MB_ICONQUESTION "Installation complete.  Do you want to read the PDF manual now?" IDNO NoReadme
-    ExecShell "open" "http://freepops.sourceforge.net/it/files/manual.pdf" SW_SHOWNORMAL
+  MessageBox MB_YESNO|MB_ICONQUESTION \
+  	"Installation complete.  Do you want to read the PDF manual now?" \
+	IDNO NoReadme
+    ExecShell "open" "http://freepops.sourceforge.net/it/files/manual.pdf" \
+    	SW_SHOWNORMAL
   NoReadme:
 FunctionEnd
 
